Cycles bake black #46550

Closed
opened 2015-10-21 06:50:31 +02:00 by Andrew Moffat · 11 comments

System Information
Linux-x86_64
Ubuntu 14.04.3 LTS
GeForce GTX 680, NVIDIA Driver 352.30

Blender Version
2.76, 48f7dd6

Short description of error
Running bpy.ops.object.bake(type="COMBINED") sometimes works and bakes the texture for the selected object. Sometimes, it does not work, and the texture remains black. The exact setup has been scripted, and the exact steps produce different results. I cannot seem to find a pattern that is causing it, though I have noticed a few things:

  • When the bake operator works, it seems to always work, and I never see a black bake.
  • When the bake operator fails, it seems to never work, UNTIL the bake button is clicked in the UI, then the bake operator from the console works again consistently

I have performed a small sampling, here are my results for 20 trials of my performing the exact steps listed below:

Works: 14 Fails: 6. It seems very near half the time it fails.

Exact steps for others to reproduce the error

  1. Quit blender completely.
  2. Start blender.
  3. Switch screen datablock to "Scripting"
  4. Open attached bake_bug.py script
  5. Press "Run Script". A new cube with a material will be set up and a bake will be attempted.
  6. Choose a window and switch it to "UV/Image Editor"
  7. Select the only image in the image list to view

It will either be completely black (incorrect), or occasionally it will be gray (correct)

  1. If black, go to the Render tab of the Properties window
  2. Press "Bake"

The previously black image will now be gray (correct)

bake_bug.py

**System Information** Linux-x86_64 Ubuntu 14.04.3 LTS GeForce GTX 680, NVIDIA Driver 352.30 **Blender Version** 2.76, 48f7dd6 **Short description of error** Running `bpy.ops.object.bake(type="COMBINED")` sometimes works and bakes the texture for the selected object. Sometimes, it does not work, and the texture remains black. The exact setup has been scripted, and the exact steps produce different results. I cannot seem to find a pattern that is causing it, though I have noticed a few things: * When the bake operator works, it seems to always work, and I never see a black bake. * When the bake operator fails, it seems to never work, UNTIL the bake button is clicked in the UI, then the bake operator from the console works again consistently I have performed a small sampling, here are my results for 20 trials of my performing the exact steps listed below: Works: 14 Fails: 6. It seems very near half the time it fails. **Exact steps for others to reproduce the error** 1. Quit blender completely. 2. Start blender. 3. Switch screen datablock to "Scripting" 4. Open attached bake_bug.py script 5. Press "Run Script". A new cube with a material will be set up and a bake will be attempted. 6. Choose a window and switch it to "UV/Image Editor" 7. Select the only image in the image list to view It will either be completely black (incorrect), or occasionally it will be gray (correct) 8. If black, go to the Render tab of the Properties window 9. Press "Bake" The previously black image will now be gray (correct) [bake_bug.py](https://archive.blender.org/developer/F246090/bake_bug.py)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @amoffat

Added subscriber: @amoffat

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@dfelinto. any ideas here?

@dfelinto. any ideas here?

This issue was referenced by 7faa9d1304

This issue was referenced by 7faa9d1304bc500185684a41f8bd65fb4893b8bb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@4e74a21e11

This issue was referenced by blender/cycles@4e74a21e118e5e1790d5acbad143d74d97039a5e
Author

Great news! I'm curious..I skimmed the diff, but I was unable to see the non-deterministic portion that was causing the bug. What was it?

Great news! I'm curious..I skimmed the diff, but I was unable to see the non-deterministic portion that was causing the bug. What was it?

Added subscriber: @brecht

Added subscriber: @brecht

For me the bug was deterministic in the latest code. The combined baking code changed a lot since this bug was reported (D1674: Cycles-Bake: Custom Baking pass), so I assume that has something to do with it, but I didn't try to figure out what exactly.

For me the bug was deterministic in the latest code. The combined baking code changed a lot since this bug was reported ([D1674: Cycles-Bake: Custom Baking pass](https://archive.blender.org/developer/D1674)), so I assume that has something to do with it, but I didn't try to figure out what exactly.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46550
No description provided.