intern/cycles/render/bake.cpp
@@ -255,30 +255,28 @@ bool BakeManager::is_aa_pass(ShaderEvalType type)
 	}
 }
 
-/* Keep it synced with kernel_bake.h::is_light_pass. */
-bool BakeManager::is_light_pass(ShaderEvalType type, const int pass_filter)
+/* Keep it synced with kernel_bake.h logic */
+int BakeManager::shader_type_to_pass_filter(ShaderEvalType type, const int pass_filter)
 {
+	const int component_flags = pass_filter & (BAKE_FILTER_DIRECT | BAKE_FILTER_INDIRECT | BAKE_FILTER_COLOR);
+
 	switch(type) {
 		case SHADER_EVAL_AO:
+			return BAKE_FILTER_AO;
 		case SHADER_EVAL_SHADOW:
-			return true;
+			return BAKE_FILTER_DIRECT;
 		case SHADER_EVAL_DIFFUSE:
+			return BAKE_FILTER_DIFFUSE | component_flags;
 		case SHADER_EVAL_GLOSSY:
+			return BAKE_FILTER_GLOSSY | component_flags;
 		case SHADER_EVAL_TRANSMISSION:
+			return BAKE_FILTER_TRANSMISSION | component_flags;
 		case SHADER_EVAL_SUBSURFACE:
-			return ((pass_filter & BAKE_FILTER_DIRECT) != 0) ||
-			       ((pass_filter & BAKE_FILTER_INDIRECT) != 0);
+			return BAKE_FILTER_SUBSURFACE | component_flags;
 		case SHADER_EVAL_COMBINED:
-			return ((pass_filter & BAKE_FILTER_AO) != 0) ||
-			       ((pass_filter & BAKE_FILTER_EMISSION) != 0) ||
-			       ((((pass_filter & BAKE_FILTER_DIRECT) != 0) ||
-			         ((pass_filter & BAKE_FILTER_INDIRECT) != 0)) &&
-			        (((pass_filter & BAKE_FILTER_DIFFUSE) != 0) ||
-			         ((pass_filter & BAKE_FILTER_GLOSSY) != 0) ||
-			         ((pass_filter & BAKE_FILTER_TRANSMISSION) != 0) ||
-			         ((pass_filter & BAKE_FILTER_SUBSURFACE) != 0)));
+			return pass_filter;
 		default:
-			return false;
+			return 0;
 	}
 }
 
